--- a/design/style.css
+++ b/design/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,800;1,900&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+
 ul {
     font-size: 26px;
     list-style-type: none;
@@ -201,4 +207,27 @@ ul {
   float: left;
   height: 400px;
   margin: 26px;
+  padding-top: 50px;
 }
+
+.l-columns{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  border: 1px solid black;
+}
+
+.l-column {
+  flex: 1;
+  margin: 2px;
+  padding: 50px;
+  transition:  0.3s;
+}
+
+.l-column p {
+  font-size: 20px;
+}
+
+.a-title {
+  text-align: center;
+  }
