--- a/design/style.css
+++ b/design/style.css
@@ -156,24 +156,18 @@ ul {
 }
 
 
-.offers-btn{
+.btn{
     text-decoration: none;
     background: #04AA6D;
-    padding: 10px 20px;
-    font-size: 30px;
+    padding: 20px 30px;
+    font-size: 20px;
     color: #fff;
     border-radius: 10px;
 
 }
 
-.offers-btn:hover{
-    text-decoration: none;
+.btn:hover{
     background: #005838;
-    padding: 10px 20px;
-    font-size: 30px;
-    color: #fff;
-    border-radius: 10px;
-
 }
 
 .s-list {
