--- a/design/style.css
+++ b/design/style.css
@@ -286,3 +286,52 @@ textarea{
 .c-btn:hover{
   background: #005838;
 }
+
+
+/* Gallery CSS */
+.g-container{
+  padding: 32px;
+}
+.slider-wrapper{
+  position: relative;
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.slider{
+  display: flex;
+  aspect-ratio: 16/9;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+  overflow: hidden;
+}
+
+.slider img{
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+}
+
+.slider-nav{
+  display: flex;
+  column-gap: 16px;
+  position: absolute;
+  bottom: 24px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.slider-nav a {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover{
+  opacity: 1;
+}
+
